Initial server configuration

--- a/views/store.ejs
+++ b/views/store.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Fink Ployd | Store</title>
+        <title>Fink Ployd | Store from EJS</title>
         <meta name="description" content="This is the description">
         <link rel="stylesheet" href="css/styles.css" />
         <script src="scripts/store.js" defer></script>
@@ -11,7 +11,7 @@
             <nav class="main-nav nav">
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="store.html">STORE</a></li>
+                    <li><a href="store">STORE</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                 </ul>
             </nav>
